Fix menu items alignment on mobile web

--- a/src/components/MenuSectionForWeb.module.scss
+++ b/src/components/MenuSectionForWeb.module.scss
@@ -1,3 +1,7 @@
+.itemsContainer {
+    overflow: hidden;
+}
+
 .itemsContainer > :not(:last-child) {
     padding: 0;
     padding-bottom: 1.5rem;
@@ -92,7 +96,7 @@
 }
 
 // Extra Small screen
-@media (max-width: 360px) {
+@media (max-width: 400px) {
     .container {
         flex-direction: column;
     }
@@ -101,5 +105,11 @@
     }
     .textContainer {
         margin: auto;
+        padding: 0;
+        padding-bottom: 1rem;
+        text-align: center;
+    }
+    .name {
+        text-align: center;
     }
 }
